src/log/build_2024-05-06_21-54-25/my_docking/stdout_stderr.log
running egg_info
creating ../build/my_docking/my_docking.egg-info
writing ../build/my_docking/my_docking.egg-info/PKG-INFO
writing dependency_links to ../build/my_docking/my_docking.egg-info/dependency_links.txt
writing entry points to ../build/my_docking/my_docking.egg-info/entry_points.txt
writing requirements to ../build/my_docking/my_docking.egg-info/requires.txt
writing top-level names to ../build/my_docking/my_docking.egg-info/top_level.txt
writing manifest file '../build/my_docking/my_docking.egg-info/SOURCES.txt'
reading manifest file '../build/my_docking/my_docking.egg-info/SOURCES.txt'
writing manifest file '../build/my_docking/my_docking.egg-info/SOURCES.txt'
running build
running build_py
creating /home/oh/slam_ws/src/build/my_docking/build
creating /home/oh/slam_ws/src/build/my_docking/build/lib
creating /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking
copying my_docking/docking_server_trial.py -> /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking
copying my_docking/dockingtwo_action_server.py -> /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking
copying my_docking/docking.py -> /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking
copying my_docking/__init__.py -> /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking
running install
running install_lib
creating /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking
copying /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking/docking_server_trial.py -> /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking
copying /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking/dockingtwo_action_server.py -> /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking
copying /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking/docking.py -> /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking
copying /home/oh/slam_ws/src/build/my_docking/build/lib/my_docking/__init__.py -> /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking
byte-compiling /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/docking_server_trial.py to docking_server_trial.cpython-310.pyc
  File "/home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/docking_server_trial.py", line 67
    if len(msg.poses) > 0 and :
                              ^
SyntaxError: invalid syntax

byte-compiling /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/dockingtwo_action_server.py to dockingtwo_action_server.cpython-310.pyc
  File "/home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/dockingtwo_action_server.py", line 77
    feedback_msg.
                 ^
SyntaxError: invalid syntax

byte-compiling /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/docking.py to docking.cpython-310.pyc
  File "/home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/docking.py", line 67
    if len(msg.poses) > 0 and :
                              ^
SyntaxError: invalid syntax

byte-compiling /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/oh/slam_ws/src/install/my_docking/share/ament_index
creating /home/oh/slam_ws/src/install/my_docking/share/ament_index/resource_index
creating /home/oh/slam_ws/src/install/my_docking/share/ament_index/resource_index/packages
copying resource/my_docking -> /home/oh/slam_ws/src/install/my_docking/share/ament_index/resource_index/packages
copying package.xml -> /home/oh/slam_ws/src/install/my_docking/share/my_docking
running install_egg_info
Copying ../build/my_docking/my_docking.egg-info to /home/oh/slam_ws/src/install/my_docking/lib/python3.10/site-packages/my_docking-0.0.0-py3.10.egg-info
running install_scripts
Installing docking script to /home/oh/slam_ws/src/install/my_docking/lib/my_docking
writing list of installed files to '/home/oh/slam_ws/src/build/my_docking/install.log'
